Fixed submit button like not being half covered

--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -8,7 +8,7 @@ form {
   text-align: left;
   align-items: center;
   margin: auto;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 body {
